cmake_minimum_required(VERSION 4.0)
project(mini_project)

set(CMAKE_CXX_STANDARD 14)

add_executable(mini_project
        mini-project.cpp
        Item.h
        MealBuilder.h
        Burger.h
        VegBurger.h
        ChickenBurger.h
        Warapper.h
        Bottle.h
        Packing.h
        Chat.h
        ColdDrink.h
        arraylist.h
        Meal.h
        OR.h
        OR.h
        OR.h
)
